--- a/02.第二个文件.md
+++ b/02.第二个文件.md
@@ -4,3 +4,6 @@ this is a project
 
 Git is a distributed version control system.
 Git is free software.
+
+Git is a distributed version control system.
+Git is free software distributed under the GPL.
